--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "mpdf/mpdf": "^8.2",
-        "setasign/fpdi": "^2.6",
-        "tecnickcom/tcpdf": "^6.8"
+        "stichoza/google-translate-php": "^5.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -34,7 +33,11 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/helpers.php"
+        ]
+
     },
     "autoload-dev": {
         "psr-4": {
@@ -76,6 +79,7 @@
             "php-http/discovery": true
         }
     },
+
     "minimum-stability": "stable",
     "prefer-stable": true
 }
