--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "mpdf/mpdf": "^8.2",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "stichoza/google-translate-php": "^5.2"
     },
     "require-dev": {
