--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
         "carlos-meneses/laravel-mpdf": "^2.1",
+        "intervention/image": "^3.11",
         "laravel-lang/common": "^6.7",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1",
         "mpdf/mpdf": "^8.2",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "stichoza/google-translate-php": "^5.2"
