حفظ تعديلات محلية

--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,12 @@
         "pharaonic/laravel-locations": "^1.5",
         "phpoffice/phppresentation": "^1.1",
         "phpoffice/phpword": "^1.4",
-        "setasign/fpdi-tcpdf": "^2.3",
+        "setasign/fpdi-tcpdf": "*",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/browsershot": "^5.0",
         "spatie/laravel-pdf": "^1.6",
-        "stichoza/google-translate-php": "^5.2"
+        "stichoza/google-translate-php": "^5.2",
+        "tecnickcom/tcpdf": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
